--- a/public/styles/blog_styles.css
+++ b/public/styles/blog_styles.css
@@ -6,7 +6,7 @@
 [Table of Contents]
 
 1. Fonts
-2. Body and some general stuff
+2. Body and some general stuff 
 3. Header
 	3.1 Top Bar
 	3.2 Logo
@@ -33,13 +33,6 @@
 1. Fonts
 ***********/
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800');
-@font-face
-{
-	font-family: 'Beyond';
-	src: url('../fonts/beyond_the_mountains.otf')  format('truetype'),
-		 url('../fonts/beyond_the_mountains.ttf')  format('opentype');
-}
 
 /*********************************
 2. Body and some general stuff
@@ -312,12 +305,12 @@ section
 {
 	position: fixed;
 	width: 100%;
-	background: rgba(54, 19, 84, 0.6);
+	background: rgba(13, 102, 225, 0.2);
 	z-index: 12;
 }
 .header.scrolled
 {
-	background: rgba(54, 19, 84, 0.85);
+	background: rgba(13, 102, 225, 0.9);
 }
 
 /*********************************
@@ -328,7 +321,7 @@ section
 {
 	width: 100%;
 	height: 36px;
-	background: #350a4e;
+	background: rgb(13, 102 ,225, 0.8);
 	-webkit-transition: all 400ms ease;
 	-moz-transition: all 400ms ease;
 	-ms-transition: all 400ms ease;
@@ -508,7 +501,7 @@ section
 	bottom: -11px;
 	width: calc(100% + 2px);
 	height: 2px;
-	background: linear-gradient(to right, #fa9e1b, #8d4fff);
+	background: #fcbf17;
 	content: '';
 	opacity: 0;
 	-webkit-transition: all 200ms ease;
@@ -1150,7 +1143,7 @@ section
 	width: 100%;
 	padding-top: 113px;
 	padding-bottom: 104px;
-	background: #31124b;
+	background: linear-gradient(to right, #0d66ff, #0ec9e6);
 }
 .footer_title
 {
