--- a/public/styles/main_styles.css
+++ b/public/styles/main_styles.css
@@ -390,10 +390,55 @@ section
 {
 	color: #FFFFFF;
 }
+
+.user_box_dropdown {
+	display: inline-block;
+	margin-left: -15px;
+}
+
+.user_box_dropdown .nav-link {
+	display: block;
+	font-size: 10px;
+	font-weight: 600;
+	color: #FFFFFF;
+	text-transform: uppercase;
+}
+
+.user_box_dropdown .nav-link:hover {
+	color: #fa9e1c;
+}
+
+.user_box_dropdown .dropdown_item {
+	color: #000;
+}
+
+.dropdown_item:hover {
+	color: #fa9e1c;
+}
+
+.hover-menu:hover {
+	color: #fa9e1c;
+}
+
+
 .user_box_link
 {
 	display: inline-block;
+	margin-right: 10px;
 }
+
+.user_box_link::after
+{
+	display: block;
+	position: absolute;
+	top: 15px;
+	right: -9px;
+	background: #FFFFFF;
+	width: 1px;
+	height: 9px;
+	content: '';
+}
+
 .user_box_link a
 {
 	display: block;
