--- a/public/styles/single_listing_styles.css
+++ b/public/styles/single_listing_styles.css
@@ -166,7 +166,7 @@ section
 {
 	display: block;
 	position: relative;
-	box-sizing: border-box;
+	box-sizing: border-box; 
 }
 .clear
 {
@@ -323,12 +323,12 @@ section
 {
 	position: fixed;
 	width: 100%;
-	background: rgba(54, 19, 84, 0.6);
+	background: rgba(13, 102, 225, 0.2);
 	z-index: 12;
 }
 .header.scrolled
 {
-	background: rgba(54, 19, 84, 0.85);
+	background: rgba(13, 102, 225, 0.9);
 }
 
 /*********************************
@@ -339,7 +339,7 @@ section
 {
 	width: 100%;
 	height: 36px;
-	background: #350a4e;
+	background: rgb(13, 102 ,225, 0.8);
 	-webkit-transition: all 400ms ease;
 	-moz-transition: all 400ms ease;
 	-ms-transition: all 400ms ease;
@@ -397,10 +397,54 @@ section
 {
 	color: #FFFFFF;
 }
+.user_box_dropdown {
+	display: inline-block;
+	margin-left: -15px;
+}
+
+.user_box_dropdown .nav-link {
+	display: block;
+	font-size: 10px;
+	font-weight: 600;
+	color: #FFFFFF;
+	text-transform: uppercase;
+}
+
+.user_box_dropdown .nav-link:hover {
+	color: #fa9e1c;
+}
+
+.user_box_dropdown .dropdown_item {
+	color: #000;
+}
+
+.dropdown_item:hover {
+	color: #fa9e1c;
+}
+
+.hover-menu:hover {
+	color: #fa9e1c;
+}
+
+
 .user_box_link
 {
 	display: inline-block;
+	margin-right: 10px;
 }
+
+.user_box_link::after
+{
+	display: block;
+	position: absolute;
+	top: 15px;
+	right: -9px;
+	background: #FFFFFF;
+	width: 1px;
+	height: 9px;
+	content: '';
+}
+
 .user_box_link a
 {
 	display: block;
@@ -408,7 +452,7 @@ section
 	line-height: 36px;
 	font-weight: 600;
 	color: #FFFFFF;
-	text-transform: uppercase;
+	text-transform: uppercase; 
 }
 .user_box_link a:hover
 {
@@ -875,8 +919,8 @@ section
 	top: 0;
 	left: 0;
 	width: 370px;
-	height: 100%;
-	background: #fa9e1b;
+	height: 35%;
+	background: #0d66ff;
 	z-index: 10;
 }
 .no-padding
@@ -945,7 +989,7 @@ section
 }
 .search_tab.active
 {
-	background: #fa9e1b;
+	background: #0d66ff;
 	color: #FFFFFF;
 }
 .search_tab.active img
@@ -958,7 +1002,7 @@ section
 }
 .search_tab:hover
 {
-	background: #fa9e1b;
+	background: #0ec9e6;
 	color: #FFFFFF;
 }
 .search_tab:hover img
@@ -1675,7 +1719,7 @@ section
 	width: 100%;
 	padding-top: 113px;
 	padding-bottom: 104px;
-	background: #31124b;
+	background: linear-gradient(to right, #0d66ff, #0ec9e6);
 }
 .footer_title
 {
