--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -150,8 +150,8 @@
 	.search
 	{
 		height: auto;
-		padding-top: 100px;
-		padding-bottom: 100px;
+		/* padding-top: 20px; */
+		padding-bottom: 20px;
 	}
 	.search_tabs_container
 	{
